--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: default
         <p>如果你想要为这个规范做贡献或觉得有不合理的地方，请访问<a href="https://github.com/omwteam/codeGuide/issues/new">New Issue</a>。</p>
     </div>
 </div>
+{% include mobile_web.html %}
 
 {% include naming_rules.html %}
 
